# tree-sitter-modelica

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/go/: binding_test.go  go.mod
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_modelica/: __init__.py
bindings/rust/: build.rs  lib.rs
example/: resistor.mo  simpleEquation.mo
grammars/: modelicahub.js  openmodelica.js
src/: grammar.json  node-types.json  parser.c
